default/objects/E2E_business_settings__c/E2E_business_settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting for e2e business form</description>
    <label>E2E business settings</label>
</CustomObject>