default/objects/E2E_business_settings__c/fields/Approval_Process_Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Service_Name__c</fullName>
    <label>Approval Process Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>