default/objects/E2E_business_settings__c/fields/Block_start_button__c.field-meta.xml
<CustomField>
    <fullName>Block_start_button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Block &quot;start&quot; button</description>
    <inlineHelpText>Block &quot;start&quot; button</inlineHelpText>
    <label>Block start button</label>
    <type>Checkbox</type>
</CustomField>