default/objects/E2E_business_settings__c/fields/Company_age__c.field-meta.xml
<CustomField>
    <fullName>Company_age__c</fullName>
    <inlineHelpText>Value in months. Required age for accessing free overdraft.</inlineHelpText>
    <label>Company age</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>