default/objects/E2E_business_settings__c/fields/DaData_Token__c.field-meta.xml
<CustomField>
    <fullName>DaData_Token__c</fullName>
    <label>DaData Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>