default/objects/E2E_business_settings__c/fields/Free_overdraft_user_profile__c.field-meta.xml
<CustomField>
    <fullName>Free_overdraft_user_profile__c</fullName>
    <description>User profile to whom credit will be available</description>
    <label>Free overdraft user profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>