default/objects/E2E_business_settings__c/fields/PP_Source_for_free_overdraft__c.field-meta.xml
<CustomField>
    <fullName>PP_Source_for_free_overdraft__c</fullName>
    <label>PP source for free overdraft</label>
    <length>255</length>
    <type>Text</type>
</CustomField>